--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
-.App {
+body {
+  background-color: #121212;
+  color: #e0e0e0;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.dropzone {
+  border: 2px dashed #01c3b3;
+  border-radius: 8px;
+  background-color: #2a2a2a;
+  color: #e0e0e0; 
+  padding: 20px;
   text-align: center;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.upload-icon {
+  font-size: 2rem;
+  color: #01c3b3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dropzone:hover {
+  background-color: #292929;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dropzone p {
+  margin: 0;
+  font-size: 1rem;
+  color: #e0e0e0;
+}
+
+.dropzone p:first-child {
+  font-size: 1.5rem;
+  color: #01c3b3;
+}
+
+.dropzone p:last-child {
+  font-size: 1rem;
+  color: #999;
+}
+
+.container {
+  background-color: #1e1e1e;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.form-group {
+  text-align: left;
+}
+
+h1 {
+  color: #01c3b3;
+  margin-bottom: 20px;
+}
+
+.form-control {
+  background-color: #2a2a2a;
+  color: #e0e0e0;
+  border: 1px solid #444;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.form-control:focus {
+  outline: none;
+  border-color: #01c3b3;
+  box-shadow: 0px 0px 5px rgba(1, 195, 179, 0.5);
+  
+}
+
+.center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  background-color: #01c3b3;
+  color: #121212;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn:hover {
+  background-color: #01c3b3;
+}
+
+.btn-success {
+  background-color: #03dac6;
+  color: #121212;
+}
+
+.btn-success:hover {
+  background-color: #01c3b3;
+}
+
+.text-danger {
+  color: #cf6679;
+}
+
+img {
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7);
+}
+
+h4 {
+  margin-bottom: 8px;
+  color: #873d0f;
+}
+
+p {
+  margin: 0;
+  color: #121212;
+}
+
+.from {
+  color: #873d0f
+}
+
+
+/* Responsive Screen Code */
+@media (max-width: 768px) {
+  .dropzone {
+    font-size: 0.9rem;
+    padding: 15px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .card-container {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .btn {
+    padding: 8px 12px;
+    font-size: 0.9rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .btn {
+    padding: 12px 20px;
+    font-size: 1.1rem;
+  }
+
+
+  h1 {
+    font-size: 2.5rem;
   }
 }
